akfavatar.h

/*
 * general types for avatar images and audio data
 */
typedef struct SDL_Surface avt_image_t;
typedef struct avt_audio_t avt_audio_t;
AVT_BEGIN_DECLS


/***********************************************************************/
/* functions */
/* most functios return the status, unless otherwise stated */
/***********************************************************************/

/***********************************************************************/
/* initialization / finalization */

/*
 * initialize the avatar system
 *
 * mode is either AVT_WINDOW or AVT_FULLSCREEN or AVT_FULLSCREENNOSWITCH.
 * The original image is freed in this function!
 * So you can directly put calls to avt_default
 * or the avt_import_* functions here.
 * the image may be NULL if no avatar should be shown
 * title and/or shortname may also be NULL
 * avt_mb_encoding() may influence title/shortname
 */
AVT_API int avt_initialize (const char *title,
			    const char *shortname,
			    avt_image_t *image,
			    int mode);
/*
 * quit the avatar system
 * can be used with atexit
 */
AVT_API void avt_quit (void);
/***********************************************************************/
/* getting an avatarimage */

/*
 * these functions can be used directly with
 * avt_initialize or avt_change_avatar_image
 * they call avt_make_transparent if approriete
 */

/*
 * X-Pixmaps (XPM), X Bitmaps (XBM) and uncompressed BMP are always supported
 * other image formats are supported with SDL_image
 */

/* get the default avatar image */
AVT_API avt_image_t *avt_default (void);
/* RGB gimp_image */
AVT_API avt_image_t *avt_import_gimp_image (void *gimp_image);
/* import avatar from file */
AVT_API avt_image_t *avt_import_image_file (const char *filename);
/* show just the avatar without the balloon */
AVT_API void avt_show_avatar (void);
/* like avt_show_avatar, but the avatar is moved in */
AVT_API int avt_move_in (void);
/* move the avatar out => empty screen */
AVT_API int avt_move_out (void);
/*
 * wait a while
 * this is for longer times - a second or more
 * it reacts on events and evetually redraws the screen if needed
 */
AVT_API int avt_wait (int milliseconds);
/***********************************************************************/
/* say or ask stuff with multy-byte encodings */

/* set encoding for mb functions */
/* NULL or "" sets the systems default encoding (use with care!) */
AVT_API int avt_mb_encoding (const char *encoding);
/*
 * prints a 0 terminated string in the balloon
 * if there is no balloon, it is drawn
 * if there is no avatar, it is shown (not moved in)
 * interprets control chars including overstrike-text
 *
 * converts from a given charset encoding
 * (see avt_mb_encoding)
 */
AVT_API int avt_say_mb (const char *txt);
/*
 * get string (just one line)
 * converted to the given encoding
 *
 * for UTF-8 encoding s should have a capacity of 4 * LINELENGTH Bytes
 */
AVT_API int avt_ask_mb (char *s, int size);
/* 0 = normal; 1 = quit-request; -1 = error */
AVT_API int avt_get_status (void);
/* get error message */
AVT_API char *avt_get_error (void);
/*
 * define the background color
 * values in the range 0x00 .. 0xFF
 * can and should be called before avt_initialize
 * if the balloon is visible, it is cleared
 */
AVT_API void avt_set_background_color (int red, int green, int blue);
/*
 * set text direction
 * the cursor is moved to start of the line
 * in a text, you might want to call avt_newline after that
 */
AVT_API void avt_text_direction (int direction);
/***********************************************************************/
/* handle coordinates inside the balloon */

/*
 * the coordinates start with 1, 1 in the upper left corner
 * and are independent from the text direction
 */

/* get position in the viewport */
AVT_API int avt_where_x (void);
AVT_API int avt_where_y (void);
/* maximum positions (whole text-field) */
AVT_API int avt_get_max_x (void);
AVT_API int avt_get_max_y (void);
/* put cusor to specified coordinates */
AVT_API void avt_move_x (int x);
AVT_API void avt_move_y (int y);
/*
 * clears the viewport
 * if there is no balloon yet, it is drawn
 */
AVT_API void avt_clear (void);
/*
 * load image file and show it
 * on error it returns AVT_ERROR without changing the status
 */
AVT_API int avt_show_image_file (const char *file);
/***********************************************************************/
/* audio stuff */

/* must be called AFTER avt_initialize! */
AVT_API int avt_initialize_audio (void);
/*
 * quit audio system
 * (automatically called by avt_quit())
 */
AVT_API void avt_quit_audio (void);
/*
 * plays a sound
 * on error it returns AVT_ERROR without changing the status
 */
AVT_API int avt_play_audio (avt_audio_t *snd, bool doloop);
/*
 * wait until the sound ends
 * this stops a loop, but still plays to the end of the sound
 */
AVT_API int avt_wait_audio_end (void);
/* stops audio immediately */
AVT_API void avt_stop_audio (void);