avatar-audio.h

/* 
 * loads a wave file 
 * supported: PCM, MS-ADPCM, IMA-ADPCM
 */
extern int avt_load_wave_file (const char *file);
/* stops audio and frees the audio memory */
extern void avt_free_wave (void);